# NebulaGE

./: .gitignore  README.md
engine/: CMakeLists.txt
launcher/: NebulaLauncher.sln
launcher/NebulaLauncher/: App.axaml  App.axaml.cs  NebulaLauncher.csproj  Program.cs
launcher/NebulaLauncher/Models/: EngineInstall.cs  LauncherSettings.cs  NebulaProject.cs  ProjectRegistry.cs  ThemePreset.cs
launcher/NebulaLauncher/Services/: EngineRegistry.cs  FontScanService.cs  GitHubDeviceFlowService.cs  GitHubService.cs  GitService.cs  IdeDetectionService.cs  ProjectService.cs  ProjectWatcherService.cs  SettingsService.cs  ThemeManager.cs  ThemeService.cs
launcher/NebulaLauncher/Themes/: NebulaTheme.axaml
launcher/NebulaLauncher/ViewModels/: AppearanceViewModel.cs  DownloadManagerViewModel.cs  EngineVersionsViewModel.cs  GitHubSessionViewModel.cs  MainWindowViewModel.cs  NewProjectDialogViewModel.cs  ProjectHubViewModel.cs  SettingsViewModel.cs  StubPageViewModel.cs  ThemesViewModel.cs  ViewModelBase.cs
launcher/NebulaLauncher/Views/: ColorPickerDialog.axaml  ColorPickerDialog.axaml.cs  EngineVersionsView.axaml  EngineVersionsView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NewProjectDialog.axaml  NewProjectDialog.axaml.cs  ProjectHubView.axaml  ProjectHubView.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  SplashScreen.axaml  SplashScreen.axaml.cs  ThemesView.axaml  ThemesView.axaml.cs
templates/: README.md
templates/empty/: .gitignore.template
tools/: build.zig
tools/src/: main.zig
